--- a/client/style.css
+++ b/client/style.css
@@ -149,3 +149,13 @@ form img {
   width: 30px;
   height: 30px;
 }
+footer{
+  color: white;
+  font-size: 16px;
+  position: relative;
+  top: -5px;
+}
+footer a{
+  color: red;
+  text-decoration: none;
+}
